<resources>
    <string name="app_name">MapApp</string>
    <string name="title_activity_maps">Map</string>
    <string name="vasiliy">Василий</string>
    <string name="tom">Том</string>
    <string name="liapold">Лиапольд</string>
    <string name="garfild">Гарфилд</string>
    <string name="vasiliy_desc">Официальный дебют американских керлов состоялся в 1983 году на выставке в Палм Стринг, а в 2002 году они были признаны международной организацией Fife. Сегодня порода наиболее популярна на своей родине – в США.</string>
    <string name="tom_desc">Это забавное существо – результат скрещивания манчкинов и канадских сфинксов. Зовут его «бамбино», что в переводе с итальянского означает «ребенок» или «дитя».</string>
    <string name="liapold_desc">Не странно ли: древнейшая порода, название которой прозрачно намекает на явно русские корни, на протяжении века совершенствовалась стараниями исключительно иностранных специалистов, и исключительно за пределами отечества? Только к 90-м годам 20 столетия русская голубая удостоилась внимания российских селекционеров.</string>
    <string name="garfild_desc">Порода Тойгер была признана и зарегистрирована в TICA сравнительно недавно в 1993 году. Основательницей породы считается Джутит Сагден , которая является дочерью Джейн Милл (основательница Бенгальской породы). Порода тойгер получила название от английских слов: toy (игрушка) + tiger (тигр)= toyger (игрушечный тигр).</string>
    <string name="vasiliy_race">Американский керл</string>
    <string name="tom_race">Бамбино</string>
    <string name="liapold_race">Русская голубая</string>
    <string name="garfild_race">Тойгер</string>
    <string name="call">Позвонить</string>
    <string name="desc">Описание:</string>
    <string name="race">Порода:</string>
</resources>
